add price for 16 and change metadata

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iCuro - Professional iPhone Repair Service</title>
-    <meta name="description" content="iCuro - Fast, reliable, and affordable iPhone repair service. Specialized in battery replacement, screen repair, and more. Quality parts with warranty." />
+
+    <title>iCuro – Profesjonalna Kuracja Twojego Iphone'a</title>
+    <meta name="description" content="iCuro – Profesjonalna Kuracja Twojego Iphone'a. Naprawiamy iPhone’y z dbałością o każdy detal — ekrany, baterie, złącza, diagnostyka, a także bardziej skomplikowane usterki. Oferujemy wysoką jakość i szybkie terminy." />
     <meta name="author" content="iCuro" />
 
-    <meta property="og:title" content="iCuro - Professional iPhone Repair Service" />
-    <meta property="og:description" content="iCuro - Fast, reliable, and affordable iPhone repair service. Specialized in battery replacement, screen repair, and more. Quality parts with warranty." />
+    <!-- OpenGraph -->
+    <meta property="og:title" content="iCuro – Profesjonalna Kuracja Twojego Iphone'a" />
+    <meta property="og:description" content="Naprawiamy iPhone’y z dbałością o każdy detal — ekrany, baterie, złącza, diagnostyka, a także bardziej skomplikowane usterki. Oferujemy wysoką jakość i szybkie terminy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Podmień na swój własny obrazek! -->
+    <!-- <meta property="og:image" content="https://twoja-domena.pl/og-image.png" /> -->
+    <!-- <meta property="og:url" content="https://twoja-domena.pl" /> -->
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="iCuro – Profesjonalna Kuracja Twojego Iphone'a" />
+    <meta name="twitter:description" content="Naprawiamy iPhone’y z dbałością o każdy detal — ekrany, baterie, złącza, diagnostyka, a także bardziej skomplikowane usterki. Oferujemy wysoką jakość i szybkie terminy." />
+    <!-- <meta name="twitter:image" content="https://twoja-domena.pl/og-image.png" /> -->
+    <!-- <meta name="twitter:creator" content="@iCuro" /> -->
   </head>
 
   <body>
