add google meta tag

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="twitter:description" content="Naprawiamy iPhone’y z dbałością o każdy detal — ekrany, baterie, złącza, diagnostyka, a także bardziej skomplikowane usterki. Oferujemy wysoką jakość i szybkie terminy." />
     <!-- <meta name="twitter:image" content="https://twoja-domena.pl/og-image.png" /> -->
     <!-- <meta name="twitter:creator" content="@iCuro" /> -->
+    <meta name="google-site-verification" content="spEtZ9NI4O6TdwN0JTlW8ikgCkod5MjaB4SKNmCHy-8" />
   </head>
 
   <body>
