a little of seo and contact and add android

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>iCuro – Profesjonalna Kuracja Twojego Iphone'a</title>
-    <meta name="description" content="iCuro – Profesjonalna Kuracja Twojego Iphone'a. Naprawiamy iPhone’y z dbałością o każdy detal — ekrany, baterie, złącza, diagnostyka, a także bardziej skomplikowane usterki. Oferujemy wysoką jakość i szybkie terminy." />
+    <meta name="description" content="Profesjonalny serwis iPhone w Warszawie. Ekspresowa naprawa wyświetlacza, wymiana baterii i inne usługi. Sprawdź cennik i umów wizytę. Gwarancja jakości." />
     <meta name="author" content="iCuro" />
 
     <!-- OpenGraph -->
